[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Hud.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=4]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -47.5
margin_right = 47.5
margin_bottom = 48.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -203.0
margin_top = -46.5
margin_right = 203.0
margin_bottom = 46.5
custom_fonts/font = SubResource( 2 )
text = "dodge and survive the monsters"
align = 1
valign = 1
autowrap = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
margin_left = 160.0
margin_top = 576.0
margin_right = 330.0
margin_bottom = 642.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start"

[connection signal="timeout" from="MessageTimer" to="." method="MessageTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="StartButton_pressed"]
